<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_mm"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".CarActivity"
    tools:showIn="@layout/app_bar_car"
    android:windowSoftInputMode="stateHidden">

    <TextView
        android:id="@+id/mm_car_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:fontFamily="sans-serif"
        android:text="..."
        android:textAlignment="center"
        android:textSize="24sp"
        android:textColor="@color/textBlack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_drawer"
        app:layout_constraintTop_toTopOf="parent"
        android:focusableInTouchMode="true"
        android:focusable="true"/>

    <ScrollView
        android:id="@+id/main_scroll"
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/background_mm_scroll"
        app:layout_constraintTop_toBottomOf="@id/btn_drawer"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <requestFocus/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/last_refill"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:textSize="17sp"/>
            <TextView
                android:id="@+id/last_refill_res"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="..."
                android:textColor="@color/textBlack"
                android:textAlignment="center"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:textSize="30sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/all_spent"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:textSize="17sp"/>
            <TextView
                android:id="@+id/all_spent_res"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="..."
                android:textColor="@color/textBlack"
                android:textAlignment="center"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:textSize="30sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/avg_spent"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:textSize="17sp"/>
            <TextView
                android:id="@+id/avg_spent_res"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="..."
                android:textColor="@color/textBlack"
                android:textAlignment="center"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:textSize="30sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/all_gas"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:textSize="17sp"/>
            <TextView
                android:id="@+id/all_gas_res"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="..."
                android:textColor="@color/textBlack"
                android:textAlignment="center"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:textSize="30sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/avg_cost"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:textSize="17sp"/>
            <TextView
                android:id="@+id/avg_cost_res"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="..."
                android:textColor="@color/textBlack"
                android:textAlignment="center"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:textSize="30sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/avg_econ"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:textSize="17sp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="5dp">
                <EditText
                    android:id="@+id/mm_mileage"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:hint="@string/input_mileage"
                    android:focusedByDefault="false"
                    android:windowSoftInputMode="stateHidden"/>
                <Button
                    android:id="@+id/mm_avg_econ_count_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="10dp"
                    android:layout_gravity="end"
                    android:text="@string/count"
                    android:background="@drawable/button_refill_background"/>
            </LinearLayout>

            <TextView
                android:id="@+id/avg_econ_res"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="..."
                android:textColor="@color/textBlack"
                android:textAlignment="center"
                android:textSize="30sp"/>

            <LinearLayout
                android:orientation="vertical"
                android:id="@+id/refills_history"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </LinearLayout>
            
            <Space
                android:layout_width="match_parent"
                android:layout_height="200dp" />

        </LinearLayout>

    </ScrollView>

    <ImageButton
        android:id="@+id/btn_drawer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:background="@drawable/button_drawer_background"
        android:scaleX="1.5"
        android:scaleY="1.5"
        android:src="@mipmap/baseline_menu_black_18dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

</android.support.constraint.ConstraintLayout>